[metadata]
# replace with your username:
name = csrtool
version = 0.0.8
author = Daniel Bond
author_email = danielbondno@gmail.com
description = Utility to generate CSR with DNSNames
#long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/bond/csrtool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    cryptography >= 36

[options.entry_points]
console_scripts =
    csr = csrtool.cli:gencsr

[options.packages.find]
where = src
